# PostWipe-Installer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  retry-release.yml
catalog/: catalog.json  catalog.schema.json
docs/: MEGA_CONTENTS.md  PROJECT_NOTES.md
public/: catalog.json
specials-gate/: README.md  worker.js  wrangler.toml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  updater-signing-key.pem.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: dmg-background.tiff  icon.icns
src-tauri/src/: lib.rs
src-tauri/src/catalog/: loader.rs  model.rs
src-tauri/src/commands/: catalog.rs  download.rs  mod.rs  scripts.rs  settings.rs  specials.rs
src-tauri/src/downloader/: events.rs  job.rs  manager.rs  mod.rs
src-tauri/src/resolver/: github_release_resolver.rs  html_regex_resolver.rs  html_resolver.rs  mod.rs  static_resolver.rs  webview_resolver.rs
src-tauri/src/scripts/: generator.rs
src-tauri/src/scripts/templates/: kill_valorant.bat  kill_valorant.ps1  restart_audio.bat  restart_audio.ps1
src/components/: AmbientBackground.tsx  AppCard.tsx  AppIcon.tsx  CategoryCard.tsx  CategoryGrid.tsx  CategoryPanel.tsx  CategorySidebar.tsx  CursorVariantPicker.tsx  DownloadHistoryPanel.tsx  DownloadQueuePanel.tsx  DownloadSpinner.tsx  ErrorBoundary.tsx  FrozenGif.tsx  LaunchSplash.tsx  MusicGlyph.tsx  OsPicker.tsx  PreviewLightbox.tsx  SearchFilterBar.tsx  SelectModeToggle.tsx  (+17 more)
(+35 files in other folders)
