[package]
name = "postwipe-installer"
version = "0.1.0"
description = "Post-wipe app installer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
tokio-util = "0.7.18"
dashmap = "6.2.1"
uuid = { version = "1.23.4", features = ["v4"] }
futures-util = "0.3.32"
thiserror = "2.0.18"
scraper = "0.27.0"
url = "2.5.8"
regex = "1.12.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

